tests/ui/fail/functions/missing.stderr
error: missing functions: DAY, TIME
 --> tests/ui/fail/functions/missing.rs:8:5
  |
8 |     functions: {
  |     ^^^^^^^^^
